# WS-Clients

./: README.md
ws_client_alice/: Cargo.toml
ws_client_alice/src/: main.rs
ws_client_bob/: Cargo.toml
ws_client_bob/src/: main.rs
