[package]
name = "ws_client_bob"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26.1"
serde = { version = "1", features = ["derive"] }
futures-util = "0.3"
tungstenite = "0.26.1"
futures = "0.3.31"
serde_json = "1.0.133"
url = "2.5.4"
uuid = { version = "1.3", features = ["v4"] }

